# TKI-141-2SEM

./: CMakeLists.txt  README.md  department.cpp  department.h  dot.cpp  dot.h  group.cpp  group.h  hm02.h  institute.cpp  institute.h  line.cpp  line.h  main  main.cpp  speciality.cpp  speciality.h  student.cpp
App/: main.cpp  queue
Tests/: tests.cpp
hm01/: hm01.cpp  hm01.h  main  main.cpp
include/: department.h  group.h  institute.h  speciality.h  student.h
src/: department.cpp  group.cpp  institute.cpp  main.cpp  speciality.cpp  student.cpp
tests/: test_department.cpp  test_group.cpp  test_institute.cpp  test_speciality.cpp  test_student.cpp
